<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_register"
    tools:context=".register.ui.RegisterActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="275dp"
        android:background="@drawable/custom_toolbar">

        <ImageButton
            android:id="@+id/imgBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_back_white"
            tools:ignore="ContentDescription" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imgIconApp"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:src="@drawable/icon_app" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/imgIconApp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/create_new_account"
            android:textColor="@color/black"
            android:textSize="28sp" />
    </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="30dp"
        android:layout_marginTop="232dp"
        android:layout_marginEnd="30dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <!--Name-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nameTil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="false">

                <EditText
                    android:id="@+id/edtUserNameRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_edittext_gray"
                    android:drawableStart="@drawable/ic_person_black"
                    android:drawablePadding="10dp"
                    android:hint="@string/name_user"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>
            <!--Email-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailTilRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/nameTil"
                android:layout_marginTop="10dp"
                app:hintEnabled="false">

                <EditText
                    android:id="@+id/edtEmailAddressRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_edittext_gray"
                    android:drawableStart="@drawable/ic_email_black"
                    android:drawablePadding="10dp"
                    android:hint="@string/email_address"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>
            <!--Password-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordTilRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/emailTilRegister"
                android:layout_marginTop="10dp"
                app:hintEnabled="false"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/edtPasswordRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_edittext_gray"
                    android:drawableStart="@drawable/ic_lock_black"
                    android:drawablePadding="10dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>
            <!--Confirm Password-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/confirmPasswordTil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/passwordTilRegister"
                android:layout_marginTop="10dp"
                app:hintEnabled="false"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/edtConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_edittext_gray"
                    android:drawableStart="@drawable/ic_lock_black"
                    android:drawablePadding="10dp"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>
            <!--Confirm Password-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/imageUserTil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/confirmPasswordTil"
                android:layout_marginTop="10dp"
                app:hintEnabled="false">

                <EditText
                    android:id="@+id/linkImageUser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_edittext_gray"
                    android:drawableStart="@drawable/ic_avatar_user_black"
                    android:drawablePadding="10dp"
                    android:hint="@string/avatar_user"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <!--Register Button-->
            <Button
                android:id="@+id/btnRegisterUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/imageUserTil"
                android:layout_marginTop="50dp"
                android:background="@drawable/custom_button"
                android:text="@string/register"
                android:textColor="@color/black" />
        </RelativeLayout>

    </ScrollView>


</RelativeLayout>